--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.22.0",
+    "uuid": "^9.0.1",
     "vite-plugin-env-compatible": "^2.0.1"
   },
   "devDependencies": {
@@ -30,6 +31,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.12"
+    "vite": "^5.1.0"
   }
 }
