--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "firebase": "^10.8.0",
     "mdbreact": "^4.6.1",
     "react": "^18.2.0",
