--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
 from = "/*"
 to = "/index.html"
 status = 200
+
+[[redirects]]
+from = "/dish/dish"
+to = "https://para-dish-back.onrender.com/dish"
+status = 200
+force = true
