--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "firebase": "^10.8.0",
+    "firebase": "^10.6.0",
     "mdbreact": "^4.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +33,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0"
-  }
+    "http-proxy-middleware": "^2.0.6",
+    "vite": "^5.1.0",
+    "vite-plugin-mock": "^3.0.1"
+  },
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
