--- a/package.json
+++ b/package.json
@@ -33,12 +33,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "http-proxy-middleware": "^2.0.6",
-    "vite": "^5.1.0",
-    "vite-plugin-mock": "^3.0.1"
-  },
-  "main": "vite.config.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "vite": "^5.1.0"
+  }
 }
