feat: save orders fonctionnality

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,4 +18,18 @@ status = 200
 force = true
 headers = { "Content-Type" = "application/json" }
 
+[[redirects]]
+from = "/private/private-home"
+to = "/index.html"
+status = 200
+force = true
+headers = { "Content-Type" = "application/json" }
+
+[[redirects]]
+from = "/private/private-home/contact"
+to = "/index.html"
+status = 200
+force = true
+headers = { "Content-Type" = "application/json" }
+
 
